@@ -51,7 +51,7 @@ class GO_Email_Model_Account extends GO_Base_Db_ActiveRecord {
 	 * @var boolean 
 	 */
 	public $checkImapConnectionOnSave=true;
-	
+
 	/**
 	 * Set to false if you want to keep the password in the session only.
 	 * 
@@ -74,6 +74,8 @@ class GO_Email_Model_Account extends GO_Base_Db_ActiveRecord {
 	 */
 	private $_session_password='';
 	private $_session_smtp_password='';
+	
+	private $_imap;
 
 	/**
 	 * Returns a static model of itself
@@ -226,7 +228,7 @@ class GO_Email_Model_Account extends GO_Base_Db_ActiveRecord {
 		}
 	}
 
-	private $_imap;
+	
 
 	public function decryptPassword(){
 		//return $this->password_encrypted==2 ? GO_Base_Util_Crypt::decrypt($this->password) : $this->password;
@@ -275,9 +277,19 @@ class GO_Email_Model_Account extends GO_Base_Db_ActiveRecord {
 		return $this->_imap;
 	}
 	
+	/**
+	 * Close the connection to imap
+	 */
+	public function closeImapConnection(){
+		if(!empty($this->_imap)){
+			$this->_imap->disconnect();
+			$this->_imap=null;		
+		}
+	}
+	
 	public function __wakeup() {
 		//reestablish imap connection after deserialization
-		$this->_imap=false;
+		$this->_imap=null;
 	}
 	
 	/**
